--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="container">
-    <div class="side-image"></div>
+    <div class="side-image login-image"></div>  <!-- Added login-image class here -->
     <div class="form-box glass">
         <h2>Create an account</h2>
         
